--- a/pathplanning_tb/package.xml
+++ b/pathplanning_tb/package.xml
@@ -55,6 +55,7 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
   <build_export_depend>actionlib</build_export_depend>
   <build_export_depend>nav_msgs</build_export_depend>
   <build_export_depend>rns_msgs</build_export_depend>
@@ -66,6 +67,7 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>visualization_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
